# waterguns-vs-paperplanes

./: .gitignore  .pack.sh  .pack.zsh  Cargo.toml  LICENSE  README.md  Rocket.toml  justfile  package-lock.json  package.json  webpack.config.js  x.py  x.sh
crate/: .pack.sh  Cargo.toml  README.md
crate/src/: game.rs  lib.rs  plane.rs  tower.rs  utils.rs
crate/src/entities/: mod.rs  plane.rs  tower.rs
crate/src/entity/: button.rs  mod.rs  plane.rs  tower.rs
crate/src/types/: buttontype.rs  hp.rs  mod.rs  mouse.rs  planepath.rs  rect.rs  selected.rs  square.rs  towerstatus.rs  towertype.rs
docs/: 0.js  1.js  game.html  index.html  main.js
docs/static/: styles.css
public/: 404.html  index.html
public/static/: styles.css
src/: draw.js  draw.ts  game.js  game.ts  main.rs
src/ts/: draw.ts  game.ts
static/: index.html
waterguns-vs-paperplanes/: .pack.sh  Cargo.toml
waterguns-vs-paperplanes/src/: lib.rs  plane.rs
