[package]
name = "waterguns-vs-paperplanes"
description = ""
version = "0.1.0"
authors = ["Maxwell Anderson, Caleb McDonald, Angelina Wanderlingh"]
edition = "2018"
license = "MIT"
repository = "https://github.com/Zaechus/waterguns-vs-paperplanes"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "Node",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
opt-level = "s"
