[package]
name = "waterguns-vs-paperplanes-wasm"
description = "The Rust to WASM components of Water Guns vs Paper Planes"
version = "0.1.0"
authors = ["Maxwell Anderson"]
edition = "2018"
license = "MIT"
repository = "https://github.com/Zaechus/waterguns-vs-paperplanes"
workspace = ".."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "CanvasRenderingContext2d",
  "console",
  "CssStyleDeclaration",
  "Document",
  "DomRect",
  "DomRectReadOnly",
  "Element",
  "HtmlElement",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "Node",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.2"